--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "fb-reactboost",
+  "name": "reactboost",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.19.2",
-    "node-fetch": "^3.3.2"
+    "axios": "^1.6.7",
+    "express": "^4.18.2",
+    "body-parser": "^1.20.2"
   }
 }
